# XPlaneConnect

./: CMakeLists.txt
Python/src/: xpc.py
xpcPlugin/: Log.h  MessageHandlers.cpp  MessageHandlers.h  XPCPlugin.cpp
xpcPlugin/XPlaneConnect/: win.xpl
xpcPlugin/XPlaneConnect/64/: lin.xpl  win.xpl
xpcPlugin/xpcPlugin/: xpcPlugin.vcxproj
